- Novos comandos de reset:
  - `/resetar bencaos` - Reseta suas bênçãos por um certo custo
  - `/resetar ficha` - Reseta sua conta do RPG. Tu pode criar outra a qualquer momento
- Novo comando de personalizalização: `/personalizar badges`. Com esse comando você pode ver as informações de suas badges, como também escolher quais badges NÃO devem aparecer em seu perfil.

### Changed

- **TODOS** comandos que possuíam erro de gramática no nome (`/cacar` ou `user`) agora possuem seus devidos acentos e caracteres especiais! `/caçar`, `/estatísticas` (exceção de ítens para não dificultar)
- O comando `/status` foi renomeado para `/estatísticas`
- O comando `/personalizar info` foi renomeado para `/personalizar sobre_mim`
- O comando `/config` foi renomeado para `/configurar`
- O comando `/loja info` foi renomeado para `/loja precos`
- O comando trisal agora mostra um botão de terminar, e é por lá que alguém do casal poderá encerrar a relação
- Blackjack: Caso o usuário inicie com um blackjack em mãos, a partida terminará, e o jogador receberá o dobro do prêmio
- Comando `/status design` foi renomeado para `/status designer`
- Agora o botão de fechar comando possui um texto para ser mais claro
- Dificuldade de subir de nível foi aumentado para `1.62`
- Tempo de resposta da Dungeon foi aumentado para `20s`
- Chance de critico de inimigos foi alterada. **1x**: `70%` -> `75%`. **1.3x:** `16%` -> `11%`
- A seleção de bênçãos no componente foi limitada para 15, já que não faz sentido ter 25 pois nem da pra selecionar algo maior que 15
- O Comando `/give` foi renomeado para `/presentear`
- O Comando `/meme fodase` foi renomeado para `/meme fds`s
- Nível de Batalha foi aumentado para `20`
- Os prêmios da roleta foram reajustados
- Gigantesca mudança no valor dos temas e cores.
- Grande mudança no valor das caças e seus rolls
- Nova formula de cálculo de dano efetivo